--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
 	<link rel="stylesheet" href="css/main.css">
 
+	<script src="js/tooltip_switcher.js">
+
 	<style type="text/css">
 	</style>
 
@@ -51,9 +53,9 @@
 		</div>
 		<div class="right-image">
 			<div class="main-block">
-			<button id="button1" type="button" class="btn btn-default" data-toggle="tooltip" data-placement="left" title="Тестовый текст!">1</button>
-			<button id="button2" type="button" class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Тестовый текст!">2</button>
-			<button id="button3" type="button" class="btn btn-default" data-toggle="tooltip" data-placement="bottom" title="Тестовый текст!">3</button>
+			<button id="button1" type="button" class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Тестовый текст! Классные штуки и всякие крутости!">1</button>
+			<button id="button2" type="button" class="btn btn-default" data-toggle="tooltip" data-placement="bottom" title="Тестовый текст! Классные штуки и всякие крутости!">2</button>
+			<button id="button3" type="button" class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Тестовый текст! Классные штуки и всякие крутости!">3</button>
 			</div>
 		</div>
 	</div>
