--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 
 	<link rel="stylesheet" href="css/main.css">
 
-	<script src="js/tooltip_switcher.js">
+	<!-- JS! -->
+	<script src="js/tooltip_switcher.js"></script>
+	<script src="js/screen_fader.js"></script>
 
 	<style type="text/css">
 	</style>
@@ -48,7 +50,7 @@
 				| Всегда на связи<br>
 			</p>
 			<div class="text-center">
-				<a href="#" type="button" class="btn btn-primary">Создать бота</a>
+				<a href="page01.html" type="button" class="btn btn-primary transition">Создать бота</a>
 			</div>
 		</div>
 		<div class="right-image">
