--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 				| Всегда на связи<br>
 			</p>
 			<div class="text-center">
-				<a href="page01.html" type="button" class="btn btn-primary transition">Создать бота</a>
+				<a href="page01.html" type="button" class="btn btn-primary transition">Пообщаться с ботом</a>
+				<a href="page02.html" type="button" class="btn btn-primary transition">Создать своего бота</a>
 			</div>
 		</div>
 		<div class="right-image">
