--- a/page01.html
+++ b/page01.html
@@ -41,7 +41,18 @@
 	<div class="wrapper">
 		<div class="main-block">
 			<h2>GEXAR</h2>
-			<h1>Тестовый экран 1</h1>
+			<h1>Чат</h1>
+			<hr>
+			<p class="main-text">
+				10:53:28 <b>Вы:</b> Привет!<br>
+				10:53:29 <b>ИИ:</b> Здравствуйте.<br>
+				10:53:35 <b>Вы:</b> Как тебя зовут?<br>
+				10:53:37 <b>ИИ:</b> Меня зовут AI v0.01 Alpha, а вас?<br>
+				10:53:41 <b>Василий:</b> Василий<br>
+				10:53:37 <b>AI v0.01 Alpha:</b> Приятно познакомиться, Василий. Позвольте поинтересоваться целью вашего визита?<br>
+				Ответ: <input type="text" name="" value="Мне нужен ..."> <a href="#" type="button" class="btn btn-default">Ввод</a>
+			</p>
+			<hr>
 			<div class="text-center">
 				<a href="page02.html" type="button" class="btn btn-primary transition">Дальше</a>
 			</div>
