--- a/page02.html
+++ b/page02.html
@@ -41,7 +41,14 @@
 	<div class="wrapper">
 		<div class="main-block">
 			<h2>GEXAR</h2>
-			<h1>Тестовый экран 2</h1>
+			<h1>Здравствуйте!</h1>
+			<h2>Меня зовут AI v0.01 Alpha</h2>
+			<p class="main-text">
+				Пожалуйства, напишите, что бы вы хотели сделать?<br>
+				<hr>
+				Ответ: <input type="text" name="" value="Мне нужен ..."> <a href="#" type="button" class="btn btn-default">Ввод</a>
+				<hr>
+			</p>
 			<div class="text-center">
 				<a href="index.html" type="button" class="btn btn-primary transition">Обратно</a>
 			</div>
